Fix:- gap aligned properly between the footer items

--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 }
 
 .footer-links li {
-    margin-bottom: 8px;
+    margin-bottom: 2px;
 }
 
 .footer-links a {
